--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "dependencies/lodash"]
-	path = dependencies/lodash
-	url = https://github.com/lodash/lodash.git
+[submodule "dependencies/queue"]
+	path = dependencies/queue
+	url = https://github.com/itsdrewmiller/queue.js.git
